codegen/ui_tests/return_shared_ref.stderr
error: Rhai functions cannot return references
  --> ui_tests/return_shared_ref.rs:13:33
   |
13 | pub fn test_fn(input: Clonable) -> &'static str {
   |                                 ^
